fix inventory table on mobile

--- a/frontend/src/assets/css/style.styl
+++ b/frontend/src/assets/css/style.styl
@@ -676,14 +676,13 @@ td.prob
   div.blood
     padding-top: 0px
     padding-bottom: 4px
+  div.cost-clan-disciplines,
   div.disciplines
     min-width: 82px
   div.burn
     min-width: 30px
   div.type
     min-width: 40px
-  div.cost-disciplines
-    min-width: 65px
 
 .search-crypt-table,
 .search-library-table
@@ -1298,9 +1297,6 @@ button.accordion-button:not(.collapsed)
   .hof-history-container,
   .hof-tournaments-container
     max-width: 1024px
-  .inventory-buttons,
-  .hide-narrow
-    display: none
   .modal-dialog
     min-width: 85%
   .modal-x-wide
